Adjusted logo presentation and attempted fix for user info not properly displaying on mobile devices

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ main {
 
 #user-info {
     width: 100%;
-    height: 50%;
+    height: 100%;
     background-image: url(Assets/pexels-felix-mittermeier-956999.jpg);
     background-size: cover;
     object-fit: cover;
@@ -115,7 +115,7 @@ main {
 
 .linkbox > a {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
@@ -124,7 +124,7 @@ main {
 }
 
 .link-icon {
-    display: flex;
+    display: flex !important;
     justify-content: center;
     align-items: center;
     width: 25%;
@@ -169,14 +169,13 @@ footer {
     align-items: center;
     width: 100%;
     height: 5vh;
-    position: fixed;
+    position: relative;
     left: 0;
     bottom: 0;
     background-color: white;
-}
-
-#logo-container {
     font-size: 1.5rem;
 }
 
-footer > 
+footer > * {
+    margin: 2.5px;
+}
